2013-01-08 Dario Rodriguez <dario.rodriguez@artica.es>

	* include/functions_config.php: Added new option to disable/enable events
	on inventory changes.

2013-01-08 Dario Rodriguez <dario.rodriguez@artica.es>

	* godmode/agentes/module_manager.php: changed text from Libray to Library

2013-01-08 Dario Rodriguez <dario.rodriguez@artica.es>

	* godmode/reporting/reporting_builder.php: Deleted a wrong code related to
	cover update.

2013-01-08 Dario Rodriguez <dario.rodriguez@artica.es>

	* include/help/es/help_reporting_advanced_tab.php,
	include/help/ja/help_reporting_advanced_tab.php,
	include/help/en/help_reporting_advanced_tab.php: Documented the new
	macro for cover page.

2013-01-08 Dario Rodriguez <dario.rodriguez@artica.es>

	* godmode/reporting/reporting_builder.php: Added a default cover page
	to PDF reports.

2013-01-08 Dario Rodriguez <dario.rodriguez@artica.es>

	* godmode/agentes/module_manager.php: Foxed an error in html
	of link to module library

2013-01-07  Hirofumi Kosaka  <kosaka@rworks.jp>

	* godmode/reporting/graph_builder.php: Fixed bug that
	unspecified graph name was displayed in the header line
	when creating a new custom graph.

2013-01-05 Sancho Lerena <slerena@artica.es>

	* include/styles/pandora.css: Fixed footer problem
	in Chrome. 

2013-01-04 Dario Rodriguez <dario.rodriguez@artica.es>

	* godmode/agentes/module_manager.php: Added link to module library
	on module creation view.

2013-01-03 Miguel de Dios <miguel.dedios@artica.es>
	
	* extensions/agents_modules.php,
	extensions/update_manager/lib/libupdate_manager.php,
	extensions/update_manager/lib/libupdate_manager_client.php,
	operation/reporting/reporting_viewer.php: cleaned source code from
	the trunk because they will be more easy to merge with the trunk.
	
	* include/functions_reporting.php: fixed when have a
	"alerts of group" content with the "all" group.

2013-01-03 Miguel de Dios <miguel.dedios@artica.es>
	
	* extensions/resource_registration.php,